Add Nominal anims folder to PZstudio build

--- a/project.json
+++ b/project.json
@@ -17,6 +17,10 @@
         "ZomboLewdDefeat": {
             "name": "ZomboLewdDefeat",
             "description": ""
+        },
+        "ZomboLewd-Anims-Nominal": {
+            "name": "ZomboLewd-Anims-Nominal",
+            "description": ""
         }
     }
 }
