Add Leonidas' anims to PZStudio

--- a/project.json
+++ b/project.json
@@ -21,6 +21,10 @@
         "ZomboLewd-Anims-Nominal": {
             "name": "ZomboLewd-Anims-Nominal",
             "description": ""
+        },
+        "ZomboLewd-Anims-Leonidas": {
+            "name": "ZomboLewd-Anims-Leonidas",
+            "description": ""
         }
     }
 }
