Move base animations into its own module
Decouple anims from framework

--- a/project.json
+++ b/project.json
@@ -25,6 +25,10 @@
         "ZomboLewd-Anims-Leonidas": {
             "name": "ZomboLewd-Anims-Leonidas",
             "description": ""
+        },
+        "ZomboLewd-Anims-Base": {
+            "name": "ZomboLewd-Anims-Base",
+            "description": ""
         }
     }
 }
